# hilbert-curve

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cabal.project  cabal.project.freeze  hilbert-curves.cabal
.github/workflows/: haskell.yml
app/: Main.hs
ci/configs/: ghc-9.10.2.project  ghc-9.12.2.project
doctest/: DocTest.hs
src/Math/Curve/SurfaceFilling/: App.hs  Hilbert.hs
test/Math/Curve/SurfaceFilling/: HilbertSpec.hs
