cabal-version: 3.4
name: hilbert-curves
version: 0.1.0.0
build-type: Simple
category: Web
-- synopsis: Short description of your package
description: Please see the README on GitHub at <https://github.com/konn/hilbert-curves#readme>
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: "2025 (c) Hiromi ISHII"
extra-doc-files:
  CHANGELOG.md
  README.md

bug-reports: https://github.com/konn/hilbert-curves/issues
homepage: https://github.com/konn/hilbert-curves#readme

source-repository head
  type: git
  location: https://github.com/konn/hilbert-curves.git

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  build-depends: base >=4.18 && <5

library
  import: defaults
  build-depends:
    adjunctions,
    diagrams,
    diagrams-rasterific,
    distributive,
    free,
    generic-data,
    generic-lens,
    lens,
    linear,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs
  exposed-modules: Math.Curve.SurfaceFilling.Hilbert
  -- cabal-gild: discover src --include=src/**/Internal.hs
  other-modules:

executable hilbert-curves-exe
  import: defaults
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: hilbert-curves

test-suite hilbert-curves-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-N

  -- cabal-gild: discover test --exclude=test/Main.hs
  other-modules:
  build-depends:
    hilbert-curves,
    tasty,

  build-tool-depends: tasty-discover:tasty-discover

test-suite hilbert-curves-doctest
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: doctest
  main-is: DocTest.hs
  ghc-options:
    -threaded
    -rtsopts
    -O2
    -with-rtsopts=-N

  build-depends:
    doctest-parallel,
    hilbert-curves,
